Bug 1617709: Fix hang monitor init/shutdown race in short-lived processes. r=mccr8

Differential Revision: https://phabricator.services.mozilla.com/D72237